--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,43 +1,15 @@
 {
     "env": {
-        "commonjs": true,
         "es2021": true,
         "node": true
     },
     "extends": [
-        "prettier",
         "airbnb-base"
     ],
-    "plugins": [
-        "prettier"
-      ],
     "parserOptions": {
-        "ecmaVersion": 12
+        "ecmaVersion": 12,
+        "sourceType": "module"
     },
     "rules": {
-      "one-var": 0,
-      "one-var-declaration-per-line": 0,
-      "new-cap": 0,
-      "consistent-return": 0,
-      "no-param-reassign": 0,
-      "camelcase":0,
-      "comma-dangle": 0,
-      "no-underscore-dangle": 0,
-      "class-methods-use-this": 0,
-      "curly": ["error", "multi-line"],
-      "import/no-unresolved": [
-        2,
-        {
-          "commonjs": true
-        }
-      ],
-      "no-shadow": [
-        "error",
-        {
-          "allow": ["req", "res", "err"]
-        }
-      ]
-       
-        
     }
-  }
+}
