--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,10 +6,17 @@
     "extends": [
         "airbnb-base"
     ],
+    "plugins":[
+        "prettier"
+    ],
+    "globals": {
+        "Atomics": "readonly",
+        "SharedArrayBuffer": "readonly"
+    },
     "parserOptions": {
         "ecmaVersion": 12,
         "sourceType": "module"
     },
-    "rules": {
-    }
+    "rules": {}
+        
 }
