--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
-    "start": "nodemon --exec babel-node index.js"
+    "test": "jest NODE_ENV= test",
+    "start": "node dist/index.js NODE_ENV=production",
+    "dev": "nodemon --exec babel-node src/index.js NODE_ENV=development",
+    "build": "babel src -d dist",
+    "migrate": "sequelize db:migrate --env development",
+    "db:migrate": "./node_modules/.bin/sequelize db:migrate"
   },
   "repository": {
     "type": "git",
@@ -26,14 +30,20 @@
   "homepage": "https://github.com/matabaroAthy/blog-api-nodejs#readme",
   "dependencies": {
     "@babel/node": "^7.13.10",
-    "babel-node": "^0.0.1-security",
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "fs": "*",
     "jest": "^26.6.3",
     "joi": "^17.4.0",
-    "mysql2": "^2.2.5"
+    "jsonwebtoken": "^8.5.1",
+    "mysql2": "^2.2.5",
+    "path": "^0.12.7",
+    "regenerator-runtime": "^0.13.7",
+    "sequelize": "^6.3.5",
+    "sequelize-cli": "^6.2.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.13.10",
@@ -47,7 +57,6 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
     "nodemon": "^2.0.7",
-    "prettier": "^2.2.1",
-    "sequelize": "^6.5.1"
+    "prettier": "^2.2.1"
   }
 }
