--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   "homepage": "https://github.com/matabaroAthy/blog-api-nodejs#readme",
   "dependencies": {
     "@babel/node": "^7.13.10",
+    "axios": "^0.21.1",
+    "babel-core": "^7.0.0-bridge.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -39,10 +41,11 @@
     "jest": "^26.6.3",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
     "mysql2": "^2.2.5",
     "path": "^0.12.7",
     "regenerator-runtime": "^0.13.7",
-    "sequelize": "^6.3.5",
+    "sequelize": "^6.6.2",
     "sequelize-cli": "^6.2.0"
   },
   "devDependencies": {
